@@ -23,13 +23,14 @@ Version bump guide:
 Note: #xxxx refers to bug numbers as viewable on http://bugs.distributed.net/
 
 ==========================================================================
-Version change log: $Id: CHANGES.txt,v 1.14.2.108 2005/11/18 19:34:25 snikkel Exp $
+Version change log: $Id: CHANGES.txt,v 1.14.2.109 2006/01/06 16:05:54 kakace Exp $
 ==========================================================================
 
 2.9000
 ------
 2.9012-497  new: x86: Added new MMX assembly OGR core, selected for MMX CPUs
             fix: ogr: some platforms reported incorrect node counts if restarted
+            imp: ppc: Recognize PPC970MP (G5 dual core)
 
 2.9011-496  new: x86: Added new assembly OGR core and selected as default
             fix: x86: Correct RC5 core count speed factor for mmx (#3770)
